sock-shop/sock-shop-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sock-shop-vs
  namespace: sock-shop
spec:
  hosts:
  - "sock-shop.bet777.win"
  gateways:
  - sock-shop-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: front-end
